[gd_scene load_steps=80 format=3]

[ext_resource type="Script" path="res://scripts/traps/totem.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/traps/projectiles/wood_spike.tscn" id="2"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Idle 1/1.png" id="3"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Idle 2/1.png" id="4"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/1.png" id="5"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/2.png" id="6"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/3.png" id="7"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/4.png" id="8"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/5.png" id="9"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 1/6.png" id="10"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 2/1.png" id="11"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 2/2.png" id="12"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 2/3.png" id="13"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 2/4.png" id="14"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 2/5.png" id="15"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Attack 2/6.png" id="16"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/1.png" id="17"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/2.png" id="18"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/3.png" id="19"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Hit 1/4.png" id="20"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Destroyed/1.png" id="21"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Destroyed/2.png" id="22"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Destroyed/3.png" id="23"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Destroyed/4.png" id="24"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Destroyed/5.png" id="25"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 1/Destroyed/6.png" id="26"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Idle 1/1.png" id="27"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Idle 2/1.png" id="28"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 1/1.png" id="29"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 1/2.png" id="30"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 1/3.png" id="31"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 1/4.png" id="32"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 1/5.png" id="33"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 1/6.png" id="34"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/1.png" id="35"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/2.png" id="36"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/3.png" id="37"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/4.png" id="38"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/5.png" id="39"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Attack 2/6.png" id="40"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 1/1.png" id="41"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 1/2.png" id="42"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 1/3.png" id="43"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Hit 1/4.png" id="44"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Destroyed/1.png" id="45"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Destroyed/2.png" id="46"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Destroyed/3.png" id="47"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Destroyed/4.png" id="48"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Destroyed/5.png" id="49"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 2/Destroyed/6.png" id="50"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Idle 1/1.png" id="51"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Idle 2/1.png" id="52"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 1/1.png" id="53"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 1/2.png" id="54"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 1/3.png" id="55"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 1/4.png" id="56"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 1/5.png" id="57"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 1/6.png" id="58"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/1.png" id="59"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/2.png" id="60"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/3.png" id="61"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/4.png" id="62"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/5.png" id="63"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Attack 2/6.png" id="64"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 1/1.png" id="65"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 1/2.png" id="66"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 1/3.png" id="67"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Hit 1/4.png" id="68"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Destroyed/1.png" id="69"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Destroyed/2.png" id="70"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Destroyed/3.png" id="71"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Destroyed/4.png" id="72"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Destroyed/5.png" id="73"]
[ext_resource type="Texture2D" path="res://assets/Shooter Traps/Sprites/Totems/Head 3/Destroyed/6.png" id="74"]

[sub_resource type="SpriteFrames" id="SpriteFrames_head1"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("3")}, {"duration": 1.0, "texture": ExtResource("4")}], "loop": true, "name": &"idle", "speed": 4.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("5")}, {"duration": 1.0, "texture": ExtResource("6")}, {"duration": 1.0, "texture": ExtResource("7")}, {"duration": 1.0, "texture": ExtResource("8")}, {"duration": 1.0, "texture": ExtResource("9")}, {"duration": 1.0, "texture": ExtResource("10")}], "loop": false, "name": &"attack", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("11")}, {"duration": 1.0, "texture": ExtResource("12")}, {"duration": 1.0, "texture": ExtResource("13")}, {"duration": 1.0, "texture": ExtResource("14")}, {"duration": 1.0, "texture": ExtResource("15")}, {"duration": 1.0, "texture": ExtResource("16")}], "loop": false, "name": &"attack_alt", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("17")}, {"duration": 1.0, "texture": ExtResource("18")}, {"duration": 1.0, "texture": ExtResource("19")}, {"duration": 1.0, "texture": ExtResource("20")}], "loop": false, "name": &"hit", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("21")}, {"duration": 1.0, "texture": ExtResource("22")}, {"duration": 1.0, "texture": ExtResource("23")}, {"duration": 1.0, "texture": ExtResource("24")}, {"duration": 1.0, "texture": ExtResource("25")}, {"duration": 1.0, "texture": ExtResource("26")}], "loop": false, "name": &"death", "speed": 10.0}]

[sub_resource type="SpriteFrames" id="SpriteFrames_head2"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("27")}, {"duration": 1.0, "texture": ExtResource("28")}], "loop": true, "name": &"idle", "speed": 4.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("29")}, {"duration": 1.0, "texture": ExtResource("30")}, {"duration": 1.0, "texture": ExtResource("31")}, {"duration": 1.0, "texture": ExtResource("32")}, {"duration": 1.0, "texture": ExtResource("33")}, {"duration": 1.0, "texture": ExtResource("34")}], "loop": false, "name": &"attack", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("35")}, {"duration": 1.0, "texture": ExtResource("36")}, {"duration": 1.0, "texture": ExtResource("37")}, {"duration": 1.0, "texture": ExtResource("38")}, {"duration": 1.0, "texture": ExtResource("39")}, {"duration": 1.0, "texture": ExtResource("40")}], "loop": false, "name": &"attack_alt", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("41")}, {"duration": 1.0, "texture": ExtResource("42")}, {"duration": 1.0, "texture": ExtResource("43")}, {"duration": 1.0, "texture": ExtResource("44")}], "loop": false, "name": &"hit", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("45")}, {"duration": 1.0, "texture": ExtResource("46")}, {"duration": 1.0, "texture": ExtResource("47")}, {"duration": 1.0, "texture": ExtResource("48")}, {"duration": 1.0, "texture": ExtResource("49")}, {"duration": 1.0, "texture": ExtResource("50")}], "loop": false, "name": &"death", "speed": 10.0}]

[sub_resource type="SpriteFrames" id="SpriteFrames_head3"]
animations = [{"frames": [{"duration": 1.0, "texture": ExtResource("51")}, {"duration": 1.0, "texture": ExtResource("52")}], "loop": true, "name": &"idle", "speed": 4.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("53")}, {"duration": 1.0, "texture": ExtResource("54")}, {"duration": 1.0, "texture": ExtResource("55")}, {"duration": 1.0, "texture": ExtResource("56")}, {"duration": 1.0, "texture": ExtResource("57")}, {"duration": 1.0, "texture": ExtResource("58")}], "loop": false, "name": &"attack", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("59")}, {"duration": 1.0, "texture": ExtResource("60")}, {"duration": 1.0, "texture": ExtResource("61")}, {"duration": 1.0, "texture": ExtResource("62")}, {"duration": 1.0, "texture": ExtResource("63")}, {"duration": 1.0, "texture": ExtResource("64")}], "loop": false, "name": &"attack_alt", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("65")}, {"duration": 1.0, "texture": ExtResource("66")}, {"duration": 1.0, "texture": ExtResource("67")}, {"duration": 1.0, "texture": ExtResource("68")}], "loop": false, "name": &"hit", "speed": 12.0}, {"frames": [{"duration": 1.0, "texture": ExtResource("69")}, {"duration": 1.0, "texture": ExtResource("70")}, {"duration": 1.0, "texture": ExtResource("71")}, {"duration": 1.0, "texture": ExtResource("72")}, {"duration": 1.0, "texture": ExtResource("73")}, {"duration": 1.0, "texture": ExtResource("74")}], "loop": false, "name": &"death", "speed": 10.0}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
extents = Vector2(26, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_damage"]
extents = Vector2(28, 46)

[sub_resource type="CircleShape2D" id="CircleShape2D_detection"]
radius = 160.0

[node name="Totem" type="StaticBody2D" groups=["trap"]]
script = ExtResource("1")
projectile_scene = ExtResource("2")
collision_layer = 1
collision_mask = 2

[node name="Head1" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_head1")
visible = false

[node name="Head2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_head2")
visible = false

[node name="Head3" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_head3")
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_body")

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(26, -42)

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, -32)
collision_layer = 0
collision_mask = 1
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_detection")

[node name="DamageArea" type="Area2D" parent="."]
position = Vector2(0, -24)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_damage")

[node name="FireTimer" type="Timer" parent="."]
wait_time = 1.8
one_shot = false
